[gd_scene load_steps=4 format=3 uid="uid://cdfe7to0578iv"]

[ext_resource type="Theme" uid="uid://eqtfln2mgj5a" path="res://contents/detail_popup/detail_popup_theme.tres" id="1_0ausa"]
[ext_resource type="Script" uid="uid://ca5n5exaexmfj" path="res://contents/detail_popup/detail_popup_menu_paper_new.gd" id="2_0ausa"]
[ext_resource type="Script" uid="uid://dy5bm1g0m8k3y" path="res://contents/detail_popup/one_in_multi_button_container.gd" id="3_bc0ec"]

[node name="DetailPopupMenuPaperNew" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -736.0
offset_top = -400.0
offset_right = -1184.0
offset_bottom = -680.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0ausa")
script = ExtResource("2_0ausa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "新建题纸"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="SubTitle_Mode" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "游戏模式"
vertical_alignment = 1

[node name="OIMContainer_Type" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_bc0ec")

[node name="Button_ModePuzzle" type="Button" parent="VBoxContainer/OIMContainer_Type"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "题目"

[node name="Button_ModeSandbox" type="Button" parent="VBoxContainer/OIMContainer_Type"]
layout_mode = 2
size_flags_horizontal = 3
text = "沙盒"
